# ray-tracer

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
scenes/: egg.json  example.json  glass.json  pattern.json  teapot.json
src/: camera.rs  canvas.rs  color.rs  consts.rs  extra.rs  geometry.rs  intersect.rs  lib.rs  light.rs  main.rs  matrix.rs  obj.rs  parallel.rs  pattern.rs  ray.rs  scene.rs  shape.rs  tuple.rs  world.rs
