[package]
name = "ray-tracer"
version = "0.1.0"
description = "A ray tracer based on Jamis Buck's Ray Tracer Challenge book."
repository = "https://github.com/swerveofshore/ray-tracer"
edition = "2018"

[dependencies]
clap = { version = "3.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
